src/Devops/orak-blog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orak-blog-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: orak-blog-api
  template:
    metadata:
      labels:
        app: orak-blog-api
    spec:
      containers:
      - name: orak-blog-api
        image: codemunch07/orak-blog:1.2
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: orak-blog-api-service
spec:
  selector:
    app: orak-blog-api
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 4000
