src/Devops/orak-blog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orak-blog-api-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: orakblog.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: orak-blog-api-service
            port: 
              number: 4000
